--- a/_posts/2017-03-24-zrong.cc-about.markdown
+++ b/_posts/2017-03-24-zrong.cc-about.markdown
@@ -1,18 +1,16 @@
 ---
 title: zrong.cc
 layout: post
-guid: urn:uuid:102ad6aa-e1e4-43e3-8338-21ddaf5a7c8c
 tags:
-  - photography
-  - leica
-  - m6
+  - about
 ---
 
-![img](/media/files/2011/12/24/SDIM0289.jpg)
+![Lost](/media/files/2014/03/17/lost.jpg)
 
-> [wechat](/media/files/2016/03/24/wechat.png)
-> [drribbble](https://dribbble.com/Lemonzhang)
-> [weibo](http://weibo.com/cutezr)
-> [maimai](/media/files/2016/03/24/maimai.png)
+> [wechat](/media/files/2016/03/24/wechat.png)  
+> [drribbble](https://dribbble.com/Lemonzhang)  
+> [weibo](http://weibo.com/cutezr)  
+> [maimai](/media/files/2016/03/24/maimai.png)  
+
 
 Follow me!
