--- a/_posts/2017-03-24-zrong.cc-about.markdown
+++ b/_posts/2017-03-24-zrong.cc-about.markdown
@@ -7,13 +7,13 @@ tags:
 
 ![Lost](/media/files/2014/03/17/lost.jpg)
 
-> <a href="/media/files/2016/03/24/wechat.png" target="_blank">wechat</a>
+* <a href="/media/files/2016/03/24/wechat.png" target="_blank">wechat</a>
 
-> <a href="https://dribbble.com/Lemonzhang" target="_blank">drribbble</a>  
+* <a href="https://dribbble.com/Lemonzhang" target="_blank">drribbble</a>  
 
-> <a href="http://weibo.com/cutezr" target="_blank">weibo</a>  
+* <a href="http://weibo.com/cutezr" target="_blank">weibo</a>  
 
-> <a href="/media/files/2016/03/24/maimai.png" target="_blank">maimai</a>  
+* <a href="/media/files/2016/03/24/maimai.png" target="_blank">maimai</a>  
 
 
 Follow me!
