--- a/_posts/2017-03-24-zrong-cc.markdown
+++ b/_posts/2017-03-24-zrong-cc.markdown
@@ -1,24 +1,19 @@
 ---
-title: 正片负片一个都不能少
+title: 文图效果
 layout: post
-guid: urn:uuid:c762d7b8-191e-49f6-95ae-442faee0267e
 tags:
-  - fujifilm
-  - camera
-  - photography
-  - xpan
-  - tx-1
+  - about
 ---
 
 ![](/media/files/2012/06/08/rose-1.jpg)
 
-[![](/media/files/2012/06/08/rose-2.jpg)](http://500px.com/photo/8359215)
+[![](/media/files/2012/06/08/rose-2.jpg)]()
 
-[![](/media/files/2012/06/08/rose-3.jpg)](http://500px.com/photo/8359312)
+[![](/media/files/2012/06/08/rose-3.jpg)]()
 
-[![](/media/files/2012/06/08/rose-4.jpg)](http://500px.com/photo/8359391)
+[![](/media/files/2012/06/08/rose-4.jpg)]()
 
-[![](/media/files/2012/06/08/rose-5.jpg)](http://500px.com/photo/8359439)
+[![](/media/files/2012/06/08/rose-5.jpg)]()
 
 
 第一卷正片，本来想买 RDP III 的，一不小心买成了 RVP 100，这东西的确不愧于“超极彩”，颜色简直艳的不像话
